# adk-sample

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: modern-python-dev.md  skill-builder.md  subagent-builder.md
.claude/skills/modern-python/: EXAMPLES.md  REFERENCE.md
src/: __init__.py
src/basic/: __init__.py  agent.py
src/common/: __init__.py  a2a_tools.py  tools.py
src/langchain_agent/: __init__.py  __main__.py  agent.py  agent_card.py  agent_executor.py
src/local_llm/: __init__.py  __main__.py  agent.py  agent_card.py  agent_executor.py  tools.py
